# CookieS

./: .gitignore  LICENSE  Procfile  README.md  package.json  pyproject.toml  requirements.txt
public/: index.html  manifest.json
server/: .cookiecutterrc  api.py  patched_run_script.py  pyproject.toml
server/server/: api.py
server/tests/: test_server.py
src/: App.tsx  constants.ts  index.tsx  theme.ts
src/components/: AuthorizationForm.tsx  CCForm.tsx  Create.tsx  DefaultDocs.tsx  Error.tsx  InitForm.tsx
src/components/initform/: CookieCutterTemplate.tsx  UserRepo.tsx
tests/: test_server.py
